@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+phodevi: Sway compositor version detection
+
 Phoronix Test Suite 9.6.0
 21 April 2020
 
